src/pages/Dashboard.css
.dashboard-root {
    display: flex;
    min-height: 100vh;
    width: 100vw;
}

.dashboard-container {
    flex: 1;
    background: linear-gradient(270deg, #fafdff, #eef4ff, #e3ecff, #fafdff);
    background-size: 600% 600%;
    animation: gradientMove 24s ease-in-out infinite;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    /* alignement à gauche */
    justify-content: flex-start;
    /* alignement en haut */
    gap: 4px;
    padding: 30px 30px;
}

@keyframes gradientMove {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

